namespace java com.thrift.test
namespace php com.thrift.test
namespace js com.thrift.test

const string SERVICE_NAME = "calService";

service CalService {
	i32 add(1:i32 param1, 2:i32 param2)
}
